--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,8 @@
 <resources>
 
     <style name="Theme.FieldMaintenance" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.FieldMaintenance.Splash" parent="Theme.FieldMaintenance">
+        <item name="android:windowBackground">@color/white</item>
+    </style>
 </resources>
